trying a few things with audio (WIP), putting in proper burns images

--- a/source/index.html
+++ b/source/index.html
@@ -13,6 +13,9 @@
     </head>
     <body>
         <input type="text" class="name-input" value="smithers" /><button class="turnOnTrigger">turn on</button>
+        <div class="burns-container">
+            <image src="images/burns-closed.png" id="burns-image" alt="montgomery burns from the simpsons" />
+        </div>
         <a class="github-link" href="https://github.com/kelvinperrie/smithers-is-good" target="_blank"><img src="images/GitHub-Mark-32px.png" alt="github logo"></a>
         <script src="scripts/jquery-3.3.1.min.js"></script>
         <script src="scripts/howler.js"></script>
