adding login prompt

--- a/source/index.html
+++ b/source/index.html
@@ -10,15 +10,25 @@
         <meta property="og:title" content=""/>
         <meta property="og:description" content="" />
         <meta property="og:image" content="https://IDUNNOYET.netlify.app/images/example.png" />
+
     </head>
     <body>
-        <input type="text" class="name-input" value="smithers" /><button class="turnOnTrigger">turn on</button>
+
         <div class="burns-container">
-            <image src="images/burns-closed.png" id="burns-image" alt="montgomery burns from the simpsons" />
+            <div class="login-prompt">
+                <div class="log-on-content">
+                    <div class="prompt-text">Name:</div>
+                    <input type="text" class="name-input" value="smithers" />
+                    <br/>
+                    <button class="turnOnTrigger turn-on-button">log on</button>
+                </div>
+            </div>
+            <image src="images/background.png" id="burns-image" alt="computer from the simpsons" />
         </div>
         <a class="github-link" href="https://github.com/kelvinperrie/smithers-is-good" target="_blank"><img src="images/GitHub-Mark-32px.png" alt="github logo"></a>
         <script src="scripts/jquery-3.3.1.min.js"></script>
         <script src="scripts/howler.js"></script>
         <script src="scripts/smithers.js"></script>
+
     </body>
 </html>
