--- a/source/index.html
+++ b/source/index.html
@@ -4,16 +4,16 @@
         <title></title>
         <link rel="stylesheet" href="styles/smithers.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
-        <meta name="description" content="" />
-        <meta name="keywords" content=""/>
+        <meta name="description" content="turn on smithers' computer" />
+        <meta name="keywords" content="turn on"/>
         <meta name="twitter:card" content="summary"/>
-        <meta property="og:title" content=""/>
-        <meta property="og:description" content="" />
-        <meta property="og:image" content="https://IDUNNOYET.netlify.app/images/example.png" />
-
+        <meta property="og:title" content="computer action"/>
+        <meta property="og:description" content="turn on smithers' computer" />
+        <!-- <meta property="og:image" content="https://smithers.vercel.app/images/example.png" /> -->
+        <link rel="preload" as="image" href="images/burns-opened.png"></link>
+        <link rel="preload" as="image" href="images/burns-closed.png"></link>
     </head>
     <body>
-
         <div class="burns-container">
             <div class="login-prompt">
                 <div class="log-on-content">
