mucking around with command prompt stuff

--- a/source/index.html
+++ b/source/index.html
@@ -15,6 +15,11 @@
     </head>
     <body>
         <div class="burns-container">
+            <div id="command-container">
+                <div class="commandOutput">
+                </div>
+                <!-- <div class="commandInput"></div> -->
+            </div>
             <div class="login-prompt">
                 <div class="log-on-content">
                     <div class="prompt-text">Name:</div>
