general tidy up and removal of some unused bits

--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
             <div class="login-prompt">
                 <div class="log-on-content">
                     <div class="prompt-text">Name:</div>
-                    <input type="text" class="name-input" value="smithers" />
+                    <input type="text" class="name-input"/>
                     <br/>
                     <button class="turnOnTrigger turn-on-button">log on</button>
                 </div>
